@@ -13,7 +13,7 @@ turnAngle(x, y, z, type = "UTM", angleCov = FALSE)
 
 \item{z}{Third point}
 
-\item{type}{\code{'UTM'} if easting/northing provided (the default), \code{'LL'} if longitude/latitude.}
+\item{type}{\code{'UTM'} if easting/northing provided (the default), \code{'LL'} if longitude/latitude. If \code{type='LL'} then the \code{\link[geosphere]{geosphere}} package must be installed.}
 
 \item{angleCov}{logical indicating to not return NA when x=y or y=z. Default: FALSE (i.e. NA is returned if x=y or y=z).}
 }
