@@ -1,14 +1,20 @@
-momentuHMM 1.5.3 2021-06-07
+momentuHMM 1.5.3 2021-06-08
 -----------------
 NEW FEATURES
 
-* 'return' argument added to plotStationary function
+* 'return' argument added to plotStationary function for returning stationary probabilities, standards errors, and confidence intervals as a list
 
 CHANGES
 
 * data stream names can no longer be 'beta', 'delta', 'pi', 'g0', or 'theta'
 
 * data stream names can no longer begin with 'beta', 'delta', 'g0', or 'theta'
+
+* added additional checks for unused arguments passed down from a calling function (e.g. fitHMM, prepData); these were previously ignored
+
+* added additional checks for undefined data stream or parameter names in common list arguments (e.g. DM, workBounds, userBounds); these were previously ignored
+
+* the following packages have been moved to 'Suggests' and are now used conditionally: geosphere and mitools. If any of these are packages needed, users will be prompted to install.
 
 
 momentuHMM 1.5.2 2021-01-06
